--- a/CERNproto.tex
+++ b/CERNproto.tex
@@ -112,6 +112,10 @@
 \section{Summary}  % [$\sim$2 pages; {\color{red} Thomas/Greg}]}
 	\input{summary}
 
+\newpage
+\section*{Appendix}  % [$\sim$2 pages; {\color{red} Thomas/Greg}]}
+	\input{appendix}
+
 
 \input{bibliography}
 
