Moved some cryostat details to appendix

--- a/cryo.tex
+++ b/cryo.tex
@@ -83,57 +83,46 @@ The top plate will contain two hatches for the installation of the TPCs; it will
 %
 The cryostat design for the CERN prototypes includes technical solutions that are of interested for the future needs of the DUNE program. For example the use of a cold ullage (\textless  100~K) to lower the impurities in the gas region, and of a LAr pump outside the cryostat to minimize the effect of noise, vibration and microphonics to the TPC inside the liquid argon volume.
 %
-The design parameters for the TPC Test at CERN cryostat are listed in Table~\ref{tbl:cryogenics-design-parameters}.
+The design parameters for the CERN prototype cryostat can be found in the Appendix.
 
-\begin{table}[htpb]
-\centering
-\begin{tabular}{|p{.4\textwidth}|p{.5\textwidth}|}
-\hline
-\textbf{Design Parameter} & \textbf{Value} \\ \hline
-Type of structure & Membrane cryostat \\ \hline
-Membrane material    &  SS 304/304L, 316/316L or equivalent. \\ \hline
-Fluid & Liquid argon (LAr)  \\ \hline
-Other materials upon approval.\\ \hline
- Outside reinforcement (support structure)  &  Steel enclosure with metal liner to isolate the outside from the insulation space, standing on legs to allow for air circulation underneath. \\ \hline
- Total cryostat volume  &  538 m$^3$ \\ \hline
- Total LAr volume  &  483 m$^3$ \\ \hline
-LAr total mass   & 673,000 kg  \\ \hline
-Minimum inner dimensions (flat plate to flat plate).   &  7.8 m (W) x 8.9 m (L) x 8.1 0 (H) \\ \hline
-Depth of LAr   &  7.2 m (0.82 m ullage, same as LBNF) \\ \hline
-Primary membrane   &   1.2 mm thick SS 304L corrugated stainless steel\\ \hline
-Secondary barrier system   &  GTT design; 0.07 mm thick aluminum between fiberglass cloth. Overall thickness 1 mm located between insulation layers.  \\ \hline
- Insulation  &  Polyurethane foam (0.9 m thick from preliminary calculations) \\ \hline
-Maximum static heat leak   &  10 W/m$^2$ \\ \hline
-LAr temperature   & 88 +/- 1K  \\ \hline
-Operating gas pressure   &  Positive pressure. Nominally 70 mbarg ($\sim$1 psig) \\ \hline
- Vaccuum  &  No vacuum \\ \hline
- Design pressure  &  350 mbarg ($\sim$5 psig) + LAr head (1,025 mbarg) \\ \hline
-Design temperature   &  77 K (liquid nitrogen temperature for flexibility) \\ \hline
-Temperature of all surfaces in the ullage during operation   & \textless 100 K  \\ \hline
-Leak tightness   & $10^{-6}$ mbar*l/sec   \\ \hline
-Maximum noise/vibration/microphonics inside the cryostat   & LAr pump outside the cryostat  \\ \hline
-Beam window   & Precise location TBD. Multiple beam windows installed on the upstream side of the cryostat  \\ \hline
- Accessibility after operations  & Capability to empty the cryostat in 30 days and access it in 60 days after the end of operations. \\ \hline
-  Lifetime / Thermal cycles &  Consistent with liquid argon program. TBD. \\ \hline
- \end{tabular}
-\caption{Design requirements for the membrane cryostat}
-\label{tbl:cryogenics-design-parameters}
-\end{table}
+%\begin{table}[htpb]
+%\centering
+%\begin{tabular}{|p{.4\textwidth}|p{.5\textwidth}|}
+%\hline
+%\textbf{Design Parameter} & \textbf{Value} \\ \hline
+%Type of structure & Membrane cryostat \\ \hline
+%Membrane material    &  SS 304/304L, 316/316L or equivalent. \\ \hline
+%Fluid & Liquid argon (LAr)  \\ \hline
+%Other materials upon approval.\\ \hline
+%Outside reinforcement (support structure)  &  Steel enclosure with metal liner to isolate the outside from the insulation space, standing on legs to allow for air circulation underneath. \\ \hline
+% Total cryostat volume  &  538 m$^3$ \\ \hline
+% Total LAr volume  &  483 m$^3$ \\ \hline
+%LAr total mass   & 673,000 kg  \\ \hline
+%Minimum inner dimensions (flat plate to flat plate).   &  7.8 m (W) x 8.9 m (L) x 8.1 0 (H) \\ \hline
+%Depth of LAr   &  7.2 m (0.82 m ullage, same as LBNF) \\ \hline
+%Primary membrane   &   1.2 mm thick SS 304L corrugated stainless steel\\ \hline
+%Secondary barrier system   &  GTT design; 0.07 mm thick aluminum between fiberglass cloth. Overall thickness 1 mm located between insulation layers.  \\ \hline
+% Insulation  &  Polyurethane foam (0.9 m thick from preliminary calculations) \\ \hline
+%Maximum static heat leak   &  10 W/m$^2$ \\ \hline
+%LAr temperature   & 88 +/- 1K  \\ \hline
+%Operating gas pressure   &  Positive pressure. Nominally 70 mbarg ($\sim$1 psig) \\ \hline
+% Vaccuum  &  No vacuum \\ \hline
+% Design pressure  &  350 mbarg ($\sim$5 psig) + LAr head (1,025 mbarg) \\ \hline
+%Design temperature   &  77 K (liquid nitrogen temperature for flexibility) \\ \hline
+%Temperature of all surfaces in the ullage during operation   & \textless 100 K  \\ \hline
+%Leak tightness   & $10^{-6}$ mbar*l/sec   \\ \hline
+%Maximum noise/vibration/microphonics inside the cryostat   & LAr pump outside the cryostat  \\ \hline
+%Beam window   & Precise location TBD. Multiple beam windows installed on the upstream side of the cryostat  \\ \hline
+% Accessibility after operations  & Capability to empty the cryostat in 30 days and access it in 60 days after the end of operations. \\ \hline
+%  Lifetime / Thermal cycles &  Consistent with liquid argon program. TBD. \\ \hline
+% \end{tabular}
+%\caption{Design requirements for the membrane cryostat}
+%\label{tbl:cryogenics-design-parameters}
+%\end{table}
 
 \textbf{Insulation system and secondary membrane: }
 %
-The membrane cryostat requires insulation applied to all internal surfaces of the outer support structure 
-and roof in order to control the heat ingress and hence required refrigeration heat load. 
-To avoid bubbling of the liquid argon inside the tank, the maximum static heat leak is 10 W/m$^2$ for the floor and the sides and 15 W/m$^2$ for the roof, higher to account for the penetrations that increase the heat budget. Preliminary calculations show that these values can be obtained using 0.9 m thick insulation panels of polyurethane foam.
-Given an 
-average thermal conductivity coefficient for the insulation material of 0.0283 W/(m$\cdot$K), the heat input 
-from the surrounding steel is expected to be about 3.2~kW total. It assumes that the hatches are foam 
-insulated as well. This is shown in Table~\ref{tbl:heat-load-calc}.
-
-The insulation material is a solid reinforced polyurethane foam manufactured as composite panels. The 
-panels get laid out in a grid with 3 cm gaps between them (that will be filled with fiberglass) and fixed 
-onto anchor bolts anchored to the support structure. The composite panels contain the two layers of 
-insulation with the secondary barrier in between. After positioning adjacent composite panels and filling 
+The membrane cryostat will have 0.9 m thick insulation panels applied to all internal surfaces (including the hatches) of the outer support structure and roof in order to control the heat ingress and hence required refrigeration heat load.  The insulation material is a solid reinforced polyurethane foam manufactured as composite panels. The panels get laid out in a grid with 3 cm gaps between them (that will be filled with fiberglass) and fixed onto anchor bolts anchored to the support structure. The composite panels contain the two layers of insulation with the secondary barrier in between. After positioning adjacent composite panels and filling 
 the 3-cm gap, the secondary membrane is spliced together by epoxying an additional overlapping layer 
 of secondary membrane over the joint. All seams are covered so that the secondary membrane is a 
 continuous liner.
@@ -148,22 +137,22 @@ could possibly cause excessive thermal stress in the support structure. The liqu
 leakage through the inner (primary) membrane will escape to the insulation volume, which is purged with 
 GAr at the rate of one volume exchange per day.
 
-\begin{table}[htpb]
-\centering
-\begin{tabular}{|p{.15\textwidth}|p{.15\textwidth}|p{.15\textwidth}|p{.15\textwidth}|p{.15\textwidth}|}
-\hline
- \textbf{Element} & \textbf{Area ($m^2$)}  &  \textbf{K ($W/mK$)} & \textbf{$\Delta$ T ($K$)}
- & \textbf{Heat Input ($W$)}\\ \hline
-Base   & 83  & 0.0283   &205   & 534 \\ \hline
-End walls  &  153 & 0.0283  &  205 &  986 \\ \hline
-Side walls   & 172  & 0.0283  &  205 & 1,108 \\ \hline
-Roof  &  83 & 0.0283  & 205  &  550\\ \hline
-   &   &   &   &  \\ \hline
-Total   &   &   &   & 3,162 \\ \hline
-\end{tabular}
-\caption{Heat load calculation for the membrane cryostat (insulation thickness=0.9~m). }
-\label{tbl:heat-load-calc}
-\end{table}
+%\begin{table}[htpb]
+%\centering
+%\begin{tabular}{|p{.15\textwidth}|p{.15\textwidth}|p{.15\textwidth}|p{.15\textwidth}|p{.15\textwidth}|}
+%\hline
+% \textbf{Element} & \textbf{Area ($m^2$)}  &  \textbf{K ($W/mK$)} & \textbf{$\Delta$ T ($K$)}
+% & \textbf{Heat Input ($W$)}\\ \hline
+%Base   & 83  & 0.0283   &205   & 534 \\ \hline
+%End walls  &  153 & 0.0283  &  205 &  986 \\ \hline
+%Side walls   & 172  & 0.0283  &  205 & 1,108 \\ \hline
+%Roof  &  83 & 0.0283  & 205  &  550\\ \hline
+%   &   &   &   &  \\ \hline
+%Total   &   &   &   & 3,162 \\ \hline
+%\end{tabular}
+%\caption{Heat load calculation for the membrane cryostat (insulation thickness=0.9~m). }
+%\label{tbl:heat-load-calc}
+%\end{table}
 
 
 \textbf{Outer Support Structure:}
@@ -198,53 +187,7 @@ minimize the potential for leaks. Studs are welded to the underside of the top p
 panels. Insulation plugs are inserted into the bolt-access holes after panels are mounted. The primary 
 membrane panels are first tack-welded then fully welded to complete the inner cryostat volume.
 %
-Table~\ref{tbl:cryostat-top-parameters} presents the list of the design parameters for the top of the cryostat.
-%
-\begin{table}[htpb]
-\centering
-\begin{tabular}{|p{.3\textwidth}|p{.7\textwidth}|} % AH {|p{.4\textwidth}|p{.5\textwidth}|}
-\hline
- \textbf{Design Parameter} & \textbf{Value} \\ \hline
- Configuration &  Removable metal plate reinforced with trusses/I-beams anchored to the membrane cryostat support structure. Contains multiple penetrations of various sizes and a manhole. Number, location and size of the penetrations TBD. The hatches shall be designed to be removable. If welded, provisions shall be made to allow for removal and re-welding six (6) times.\\ \hline
-Plate/Trusses non-wet material  &  Steel if room temperature.
-SS 304/304 or equivalent if at cryogenic temperature
-\\ \hline
-Wet material  & SS 304/304L, 316/316L or equivalent. 
-Other materials upon approval.
- \\ \hline
- Fluid & Liquid argon (LAr) \\ \hline
-Design pressure  & 350 mbarg (~5 psig) \\ \hline
-Design temperature  & 77 K (liquid nitrogen temperature for flexibility) \\ \hline
-Inner dimensions  & To match the cryostat \\ \hline
-Maximum allowable roof deflection  & 0.003 m (differential between APA and CPA) \\ \hline
-Maximum static heat leak  & \textless 15 W/m$^2$  \\ \hline
- Temperatures of all surfaces in the ullage during operation & \textless 100 K \\ \hline
-Additional design loads  &  -	Top self-weight \\
- & -	Live load (488 kg/m$^2$)\\
-& -	Electronics racks (400 kg in the vicinity of the feed through)\\
-& -	Services (150 kg on every feed through)
-\\ \hline
-TPC anchors  & %Capacity: AH
-Number and location TBD. Minimum 6.
- \\ \hline
- Hatch opening for TPCs installation &  3.550 m x 2.000 m (location TBD)\\ \hline % , to . in numbers
-Grounding plate  &  1.6 mm thick copper sheet brazed to the bottom of the top plate\\ \hline
-Lifting fixtures  & Appropriate for positioning the top at the different parts that constitute it. \\ \hline
-Penetrations  &  1 LAr In, 1 Purge GAr In, 1 Vent GAr In \\ 
-& 2 Pressure Safety Valves, 2 Vacuum Safety Valves \\ 
-& 1 GAr boil off to condenser \\ 
-& 1-2 Liquid level sensors \\ 
-& 1-2 Instrumentation \\ 
-& 1 Temperature sensors feedthroughs? \\ 
-& 1 LAr for cool down, 1 GAr for cool down \\ 
-& 1 TPC signal, 3 TPC feedthroughs \\
-& 1 Photon Detector for APA (Cold) \\
-& Calibration dc\\ \hline
-Lifetime / Thermal cycles  & Consistent with the liquid argon program TBD. \\ \hline
-\end{tabular}
-\caption{Design parameters for the top of the cryostat}
-\label{tbl:cryostat-top-parameters}
-\end{table}
+A list of the design parameters for the top of the cryostat can be found in the Appendix.
 
 \textbf{Beam windows:}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
