Put Section Titles in Caps

--- a/CERNproto.tex
+++ b/CERNproto.tex
@@ -83,11 +83,11 @@
 	
 
 %\section{Single Phase LAr Detector [$\sim$10 pages; {\color{red} J. Stewart et al.}]}
-\section{Single Phase LAr Detector} 
+\section{Single-Phase LAr Detector} 
 	\input{singlephasedet}
 
 
-\section{Cryostat and Cryogenics system} % [$\sim$5 pages; {\color{red} David/Barry/Jack}]}
+\section{Cryostat and Cryogenics System} % [$\sim$5 pages; {\color{red} David/Barry/Jack}]}
 	\input{cryo.tex}
 	
 \section{Calibration}
@@ -98,14 +98,14 @@
 	\input{testbeamreq}
 
 
-\section{Computing, data handling and software} %  [$\sim$3 pages; {\color{red} Maxim/Craig}]}
+\section{Computing, Data Handling and Software} %  [$\sim$3 pages; {\color{red} Maxim/Craig}]}
 	\input{computing}
 
-\section{Installation and infrastructure}  % [5 pages; {\color{red} David/Jack/Cheng-Ju/Thomas}]}
+\section{Installation and Infrastructure}  % [5 pages; {\color{red} David/Jack/Cheng-Ju/Thomas}]}
 	\input{nuplatform}
 	
 	
-\section{Schedule, organization and cost estimate} % [$\sim$5 pages; {\color{red} Thomas/Greg}]}
+\section{Schedule, Organization and Cost Estimate} % [$\sim$5 pages; {\color{red} Thomas/Greg}]}
 	\input{organ}
 
 \newpage
@@ -116,7 +116,7 @@
 \section*{Appendix}  % [$\sim$2 pages; {\color{red} Thomas/Greg}]}
 	\input{appendix}
 
-
+\newpage
 \input{bibliography}
 
 \end{document}
