Use cap for first word of subsection title

--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -95,7 +95,7 @@ A 115 kt-MW-years exposure in each of neutrino and antineutrino modes is assumed
 %\end{tabular}
 
 
-\subsection{Detector and Beam Requirements }
+\subsection{Detector and beam requirements }
 \label{detbeam_main}
 
 LAr TPC technology was first proposed for use in neutrino experiments by C. Rubbia in 1977
@@ -200,7 +200,7 @@ is achieved in those cases and for the above detector dimensions.
 %\label{detbeam_rates}
 %Estimation of  beam particles rates  necessary to collect high enough statistics in a reasonable time to obtain goals of of the measurements.
 % THis should be discussed in the beam section
-\subsection {Beam Particle Requirements}
+\subsection {Beam particle requirements}
 
 Table~\ref{tab:runsum} summarizes the requested particle types and momenta along with 
 required sample sizes for the test beam program.
@@ -490,7 +490,7 @@ perform tests of PID algorithms and Bethe-Bloch calibration measurements.
 %collected particle charge, track angle, as well as 
 %which depends strongly 
 
-\subsubsection{Reconstruction Effects}
+\subsubsection{Reconstruction effects}
 \label{sec_reco}
 
 Reconstruction algorithms use all three signal planes for 3D track and event reconstruction. The quality of reconstruction is affected by two main factors that can be quantified with test beam data:
