Use cap for first word of subsection title

--- a/cryo.tex
+++ b/cryo.tex
@@ -155,7 +155,7 @@ GAr at the rate of one volume exchange per day.
 %\end{table}
 
 
-\textbf{Outer Support Structure:}
+\textbf{Outer support structure:}
 %
 The proposed design is a steel support structure with a metal liner on the inside to isolate the insulation region and keep the moisture out. This choice allows natural and forced ventilation to maintain the temperature of the steel within its limit, without the need of heating elements and temperature sensors. 
 The main body of the membrane cryostat does not have side openings for construction. The access is only from the top. There is a side penetration for the liquid argon pump for the purification of the cryogen.
@@ -272,7 +272,7 @@ critical; an outage of the purge blower would have negligible impact on LAr puri
 
 
 %%%%%%%%%%%%%%%%%
-\subsection{Cryogenic System}
+\subsection{Cryogenic system}
 
 Figure~\ref{fig:proposed-LN2-system} outlines the basic scheme of the LN2 supply system, which was 
 proposed by CERN for the Short Baseline Program and found to be an appropriate solution for this 
