--- a/cryo.tex
+++ b/cryo.tex
@@ -39,7 +39,7 @@ The beam window design is still being worked on and may lead to minor modificati
 any of the current boundaries conditions listed above is violated.
   
 
-The cryostat has an inner volume of 483 m$^3$ and can contain  673 tons of LAr.
+The cryostat has an inner volume of 483 m$^3$ and can contain  673 t of LAr.
 %
 %The design is based on a scaled up version of the LBNE 35-ton Prototype\cite{montanari_35ton} 
 %% (this is a comment) add \cite{montanari_sbn_perf} if public access in docdb 9270 (AH)
@@ -68,7 +68,7 @@ Two membrane cryostat vendors are known: GTT (Gaztransport \& Technigaz) from Fr
 \end{figure}
 
 To minimize the contamination from warm surfaces, during operation the temperature of all surfaces in the ullage shall be lower than 100~K. 
-It has been observed in the Materials Test Stand (MTS) and the Liquid Argon Purity Demonstrator (LAPD) at Fermilab that the outgassing is significantly reduced below 100~K \cite{outgassing}. A possible way to achieve this requirement is to spray a mist of clean liquid and gaseous argon to the metal surfaces in the ullage and keep them cold, similar to the strategy that was developed for the cool down of the LBNE 35 Ton prototype.
+It has been observed in the Materials Test Stand (MTS) and the Liquid Argon Purity Demonstrator (LAPD) at Fermilab that the outgassing is significantly reduced below 100~K \cite{outgassing}. A possible way to achieve this requirement is to spray a mist of clean liquid and gaseous argon to the metal surfaces in the ullage and keep them cold, similar to the strategy that was developed for the cool down of the LBNE 35 t prototype.
 
 The top plate will contain two hatches for the installation of the TPCs; it will also contain a manhole to enter the tank after closing the hatches, and several penetrations for the cryogenic system and the detector. 
 
@@ -291,7 +291,7 @@ From the dewar storage the LN2 is then transferred to a distribution facility lo
 hall. It includes a small buffer volume and an LN2 pumping station that transfers the LN2 to the argon 
 condenser and other services as needed. The low estimated heat leak of the vessel ($\sim$3.2~kW) and the 
 location inside an above ground building allow for use of an open loop system typical of other 
-installations operated at Fermilab (LAPD, LBNE 35 ton prototype, MicroBooNE) and at CERN. 
+installations operated at Fermilab (LAPD, LBNE 35 t prototype, MicroBooNE) and at CERN. 
 The main goal of the LN2 system is to provide cooling power for the argon condenser, the initial cool down of 
 the vessel and the detector, and all other services as needed.
 %
@@ -323,7 +323,7 @@ Nominal LAr purification flow rate (filling/ops) & 5.5 day/volume exchange \\ \h
 
 
 Figure~\ref{fig:proposed-LAr-system} shows a schematic diagram of the proposed liquid argon system. It is based on the design of the 
-LBNE 35 ton prototype, the MicroBooNE detector systems and the plans for the DUNE Far Detector.
+LBNE 35 t prototype, the MicroBooNE detector systems and the plans for the DUNE Far Detector.
 \begin{figure}
 \begin{center}
 \includegraphics[width=1.0\textwidth]{figures/proposed-LAr-system} 
