--- a/introduction.tex
+++ b/introduction.tex
@@ -1,10 +1,10 @@
 
 {\it 
 This document describes the motivation and technical details of the proposed detector. 
-In section~\ref{intro} we give a brief overview of the goals for the detector and beam test.
-Section~\ref{detbeamtest} describes the scientific motivation and the planned program of measurements. The layout of the single phase liquid argon detector and technical details of the detector components are specified in section~\ref{singlephasedet}. In section~\ref{cryo} we provide information on the proposed cryostat which houses the detector as well as on the required cryogenics system. Section~\ref{calibration} introduces our approach to calibrating the detector and the necessary tools to do so. We describe the requirements for the charged particle beam and a preliminary run plan in section~\ref{testbeamreq}.
-In section~\ref{computing} we estimate computing and data handling needs before we describe the installation procedure for the detector
-and the interface to the CERN Neutrino Platform in section~\ref{nuplatform}. We present schedule and organization for the proposed activities in section~\ref{organ} before we conclude in section~\ref{summary}.}
+In Section~\ref{intro} we give a brief overview of the goals for the detector and beam test.
+Section~\ref{detbeamtest} describes the scientific motivation and the planned program of measurements. The layout of the single phase liquid argon detector and technical details of the detector components are specified in Section~\ref{singlephasedet}. In Section~\ref{cryo} we provide information on the proposed cryostat which houses the detector as well as on the required cryogenics system. Section~\ref{calibration} introduces our approach to calibrating the detector and the necessary tools to do so. We describe the requirements for the charged particle beam and a preliminary run plan in Section~\ref{testbeamreq}.
+In Section~\ref{computing} we estimate computing and data handling needs before we describe the installation procedure for the detector
+and the interface to the CERN Neutrino Platform in Section~\ref{nuplatform}. We present schedule and organization for the proposed activities in Section~\ref{organ} before we conclude in Section~\ref{summary}.}
 
 \label{intro}
 
