--- a/readout.tex
+++ b/readout.tex
@@ -67,9 +67,9 @@ to them at start-up.
 The RCE system consists of the following components:
 a commercial ATCA shelf (2-, 6-, or 14-slot), a Cluster-On-Board (COB) which is the "front board" in ATCA terms,
 and a Rear-Transition-Module (RTM) which is the "rear board".
-A schematic of the system is shown in Figure \ref{fig:rce}.
+A schematic of the system is shown in Fig.~\ref{fig:rce}.
 The COB is a custom board, developed by SLAC, which holds the processing power of the system.
-The COB (see Figure \ref{fig:rce}) consists of 5 bays for holding daughter boards, an onboard 10-GbE switch,
+The COB (see Fig.~\ref{fig:rce}) consists of 5 bays for holding daughter boards, an onboard 10-GbE switch,
 and both 10- and 1-Gb ethernet connections for communications with the back-end system.
 Four of the daughter-board bays are for Data Processing Modules (DPM), each of which can hold up to two RCEs.
 The RCE is the core procession unit of the system; it is made up of a modern SoC (currently, the Xilinx Zynq-7045)
