--- a/singlephasedet.tex
+++ b/singlephasedet.tex
@@ -69,7 +69,7 @@ by itself and inside the cryostat at CERN.  A uniform electric field is created 
 
 The TPC will be assembled from elements that are of the same size and materials as those planned for the first DUNE far detector module.  
 
-The overall size of the TPC has been determined based on the desired particle containment in order to address the required physics measurements (see section \ref{detbeamtest}). The TPC will have a 3-APA wide active volume and consists of two drift volumes with a drift length of 3.6~m each (see Fig.~\ref{fig:CERNdet-overview}).  
+The overall size of the TPC has been determined based on the desired particle containment in order to address the required physics measurements (see Section \ref{detbeamtest}). The TPC will have a 3-APA wide active volume and consists of two drift volumes with a drift length of 3.6~m each (see Fig.~\ref{fig:CERNdet-overview}).  
 The APAs have an active (total) area measuring 2.29 m (2.32 m) wide and 5.9 m (6.2 m) high. The combination of the three APAs determines the overall TPC length to be 7.0~m. There will be a cathode plane (CPA) in the center between the two rows of APAs.  
 The overall width of the TPC will be determined by a combination of the drift distances and the thicknesses of the two APA planes and the 
 CPAs and amounts to 7.4~m.  
@@ -120,10 +120,10 @@ The cryostat would have to be emptied and the planes shifted to the 2.5~m drift 
 % File from Bo Yu on the TPC component design
 \input{APA-CP-FieldCage}
 
-\subsubsection{Photon Detection System}
+\subsubsection{Photon detection system}
 \input{photondetector}
 
-\subsubsection{TPC and PDS Readout}
+\subsubsection{TPC and PDS readout}
 \input{readout}
 
 \subsubsection{DAQ, Slow control and monitoring}
