--- a/testbeamreq.tex
+++ b/testbeamreq.tex
@@ -1,5 +1,5 @@
 \label{testbeamreq}
-\subsection{Particle Beam Requirements}
+\subsection{Particle beam requirements}
 The requested beam parameters are driven by the requirement that the results from the CERN test beam should be directly applicable to the future large underground single-phase LAr detector with minimal extrapolation. The CERN test beam data will be used to evaluate the detector performance, to understand the various physics systematic effects, and to provide ``neutrino-like'' data for event reconstruction studies. To satisfy the requirement, the beam parameters must span a broad range of particle spectrum that are expected in the future neutrino experiment. The particle beam composition should consist of electrons, muons, and hadron beams that are charge-selected. The expected momentum distributions for secondary particles from neutrino interactions are shown in Figure~\ref{fig:particle_momenta}. There is a large spread in the momentum distribution with most particles peaked near 200 MeV/c. To cover the momentum range of interest, the momentum of the test beam should step from 0.2 GeV/c up to 10 GeV/c. 
 
 The maximum electron drift time in the TPC is about 2.2 ms. So, to minimize pile-up in the TPC, the planned beam rate should be around 200 Hz.  Since the single-phase TPC consists of two drift volumes, it is desirable to aim the particle beam so that the hadronic showers are mostly contained in the same drift volume.  The nominal plan is to have the beam enter the cryostat slightly downward at an angle of about 6 degrees. This angle will roughly match the angle at which the neutrino beam enters the liquid argon cryostat at the far detector for the DUNE experiment. Along the horizontal plane, the beam should enter the cryostat with an angle of about 10 degrees to avoid pointing the beam perpendicular to the electron drift in the TPC.  We also plan to take some data with the beam entering a different region of the TPC, and may include some data with particles crossing one drift volume to the next.  The summary of the beam requirements are shown in Table~\ref{table:beamspecs}.
@@ -49,8 +49,8 @@ The maximum electron drift time in the TPC is about 2.2 ms. So, to minimize pile
 \label{table:beamspecs}
 \end{table}
 
-\subsection{EHN1 H4ext Beamline and Beam Instrumentation}
-The H4ext is an extension of the existing H4 beamline in Experimental Hall North 1 (EHN1).  To produce particles in the momentum range of interest, a 60-80 GeV/c pion beam from the T2 target is used to generate tertiary beams. The tertiary particles are momentum and charge-selected and transported down H4ext beamline to the experimental area. A conceptual layout of the H4ext beamline is shown in Figure~\ref{fig:H4extPrelim}.  The top plot in Figure~\ref{fig:H4extPrelim} is the bird's eye view and the bottom plot is the side view of the beam line layout.
+\subsection{EHN1 H4ext beamline and beam instrumentation}
+The H4ext is an extension of the existing H4 beamline in Experimental Hall North 1 (EHN1).  To produce particles in the momentum range of interest, a 60-80 GeV/c pion beam from the T2 target is used to generate tertiary beams. The tertiary particles are momentum and charge-selected and transported down H4ext beamline to the experimental area. A conceptual layout of the H4ext beamline is shown in Fig.~\ref{fig:H4extPrelim}.  The top plot in Fig.~\ref{fig:H4extPrelim} is the bird's eye view and the bottom plot is the side view of the beam line layout.
 %In the Figure, the cryostat for this proposal is located at the lower right hand corner of the plot (in the H4 beam line). The cryostat in the H2 beam line is for the WA105 Collaboration.
 
 \begin{figure}[h]
@@ -67,21 +67,21 @@ The H4ext is an extension of the existing H4 beamline in Experimental Hall North
 \label{beaminstrument}
 Beam instrumentation provides important information about the characteristics of the beam. It is expected that a series of detectors will be installed along the beam line to measure the particle momentum, identify particle type, and track the particle trajectory.
 
-\subsubsection{Beam Position Detector}
+\subsubsection{Beam position detector}
 The beam position detector measures the positions of the particle as it traverses the detector. Two detector technologies are under considerations: wire chambers and scintillating fiber trackers. For the nominal setup, one beam position detector is installed upstream and another one downstream of the last bending magnet. This pair provides additional momentum information about the particles as well as the first set of position measurements. Without tracking information, the momentum spread of the beam is expected to be at around 5\% based on the acceptance of the dipole magnets. With additional tracking information, we are likely to be able to measure the momentum of the individual particles to close to one percent level. A third beam position detector is placed right in front of the beam window on the cryostat wall to provide the last position information before the beam enters the cryostat.
 
-\subsubsection{Particle Identification}
+\subsubsection{Particle identification}
 In order to have good particle identification over large momentum range, two independent particle identification systems are needed in the beamline. The Time-of-Flight system will be used to cover the lower momentum range while a Threshold Cherenkov detector will be tuned for higher momentum particles. We will require $\geq$ 3$\sigma$ $K$/$\pi$ separation for momentum range from 0.2 to a few GeV/c. Work is in progress to better define the beamline layout to meet the requirements.
 
-\subsubsection{Muon Beam Halo Counters}
+\subsubsection{Muon beam halo counters}
 The muon beam halo counters is a set of detectors (e.g. plastic scintillator paddles) surrounding the beamline. The main purpose is to tag particles (primarily muons from the upstream production target) that are outside of the beam axis, but may potentially enter the TPC volume. The counter information is used to either veto or simply flag these class of events. The Muon Beam Halo counter can be a subset of the cosmic muon veto system. 
 
 %\subsection{Beam Window on LAr Cryostat}
 %This section could be absorbed into the cryostat chapter.
 
 
-\subsection{Beam Rates and Run Plan}
-At the time of this proposal, the beamline design has not been finalized. To estimate the beam rates, we use inputs from a generic target simulation based on 100k 80 GeV $\pi^+$ beam on 15 cm copper target. This $\pi^+$ rate is roughly equivalent to 10\% of a typical SPS spill. The distributions of the tertiary particles from the copper target are shown in Figure~\ref{fig:PionOnCuTarget}. The figure on the left is for postively charged and the figure on the right is for negatively charged tertiary particles. 
+\subsection{Beam rates and run plan}
+At the time of this proposal, the beamline design has not been finalized. To estimate the beam rates, we use inputs from a generic target simulation based on 100k 80 GeV $\pi^+$ beam on 15 cm copper target. This $\pi^+$ rate is roughly equivalent to 10\% of a typical SPS spill. The distributions of the tertiary particles from the copper target are shown in Fig.~\ref{fig:PionOnCuTarget}. The figure on the left is for postively charged and the figure on the right is for negatively charged tertiary particles. 
 
 \begin{figure}[tbh]
   \centering
@@ -90,7 +90,7 @@ At the time of this proposal, the beamline design has not been finalized. To est
 \label{fig:PionOnCuTarget}
 \end{figure}
 
-To formulate a preliminary beam time request, we assume the hadron beam rates and spectrum as given in Figure~\ref{fig:PionOnCuTarget}. For the beam rate estimates, we account for particle decays assuming the distance from the secondary target to the cryostat to be 30 m. A significant fraction of pions and kaons below 1 GeV/c decay before reaching the liquid argon cryostat. In addition, we also assume the data taking efficiency to be about 50\%. For the electron sample, we expect a different optimized beamline setup to produce a pure electron beam with a flux of about 200 Hz. A preliminary run plan for one configuration is shown in Table~\ref{tab:RunPlan}. 
+To formulate a preliminary beam time request, we assume the hadron beam rates and spectrum as given in Fig.~\ref{fig:PionOnCuTarget}. For the beam rate estimates, we account for particle decays assuming the distance from the secondary target to the cryostat to be 30 m. A significant fraction of pions and kaons below 1 GeV/c decay before reaching the liquid argon cryostat. In addition, we also assume the data taking efficiency to be about 50\%. For the electron sample, we expect a different optimized beamline setup to produce a pure electron beam with a flux of about 200 Hz. A preliminary run plan for one configuration is shown in Table~\ref{tab:RunPlan}. 
 %
 \begin{table}[p]
 \centering
